cmake_minimum_required(VERSION 3.19)
project(CPP_Algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPP_Algorithms main.cpp LinkedList.cpp LinkedList.h HashTable.cpp HashTable.h BinaryTree.cpp BinaryTree.h CSVparser.cpp CSVparser.h Bid.h Node.h BNode.h BinaryTreeMenu.h HashTableMenu.h LinkedListMenu.h Bid.cpp Utilities.h VectorMenu.h)